--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "test",
+  "name": "test_framework",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx ./src/index.ts"
+    "test": "mocha --config ./config/mocharc.json",
+    "jest": "jest --config ./config/jest.config.cjs",
+    "api": "npx jest --config ./config/api.config.js",
+    "pret": "npx prettier --write ."
   },
-  "author": "Anns\ba",
+  "author": "anna",
   "license": "ISC",
-  "description": "",
+  "description": "A simple test framework",
   "devDependencies": {
-    "@types/node": "^24.5.2",
+    "@types/chai": "^5.2.3",
+    "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
+    "@types/mochawesome": "^6.2.5",
+    "@types/node": "^24.10.1",
+    "@types/superagent": "^8.1.9",
+    "chai": "^6.2.1",
+    "jest": "^30.2.0",
+    "mocha": "^11.7.5",
+    "mochawesome": "^7.1.4",
+    "superagent": "^10.2.3",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
