--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,35 @@
+// {
+//   "compilerOptions": {
+//     "rootDir": "src",
+//     "outDir": "compiled",
+//     "allowImportingTsExtensions": true,
+//     "module": "NodeNext",
+//     "moduleResolution": "NodeNext",
+//     "target": "ES2020",
+//     "types": ["node"],
+//     "sourceMap": true,
+//     "declaration": true,
+//     "declarationMap": true,
+//     "strict": true,
+//     "skipLibCheck": true
+//   }
+// }
+
 {
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "compiled",
-    "allowImportingTsExtensions": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "ES2020",
-    "types": ["node"],
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
+    "target": "ES2024",
+    "module": "ESNext",
     "strict": true,
-    "skipLibCheck": true
-  }
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["ES2024", "dom"],
+    "rootDir": "./"
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules"]
 }
-
