--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
   "compilerOptions": {
     "target": "ES2024",
     "module": "ESNext",
+    "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
